Update : `Create - Home and Section Container`

--- a/spright-universe/index.html
+++ b/spright-universe/index.html
@@ -7,6 +7,7 @@
     <meta author="Baku-Stark">
     <meta name="description" content="React project">
     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" type="image/svg+xml" href="/site_icon.ico" />
     <title>Spright Universe [RPG]</title>
   </head>
